# yodlee-hs

./: .gitignore  LICENSE  yodlee-hs.cabal
src/Yodlee/: Aggregation.hs  Endpoints.hs  Types.hs
src/Yodlee/Aggregation/: Endpoints.hs  Types.hs
src/Yodlee/IAV/: DataService.hs
