name:                yodlee-hs
version:             0.1.0.0
synopsis:            An API library for the Yodlee service
license:             BSD3
license-file:        LICENSE
author:              Zhouyu Qian
maintainer:          zhouyu@capital-match.com
copyright:           2016 Capital Match Platform Pte Ltd
category:            Yodlee
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Yodlee.Aggregation
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite yodlee-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , yodlee-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
